# sapso_base

./: .gitignore  GymWrapper.py  RL.py  Swarm.py  analysis.py  eval.py  main.py  plots.py  pso_paper_static_eval.py  pso_statistic_eval_grid.py  pso_statistic_eval_random.py  pyproject.toml  requirements.txt  rl_env_wrapper.py  rl_eval.py  rl_train.py  swarm_eval.py  t_test.py
PSO/: Lib_Swarm.py  __init__.py  pso_lib.py  pso_statistic_eval_grid.py  pso_statistic_eval_random.py  swarm_eval.py  utils.py
RL/: __init__.py  rl_env_wrapper.py  rl_eval.py
eval/PSO/: pso_lib.py  pso_paper_static_eval.py
eval/RL/: rl_statistic_eval.py
eval/results/: analysis.py  t_test.py
eval/results/plots/: plotly_plots.py  plots.py
eval/results/pso_trial_results/: analysis.ipynb
eval/results/train_results/: analysis.ipynb
eval/results/trial_results/.ipynb_checkpoints/: analysis-checkpoint.ipynb
fitness_function/: FitnessFunction.py
plots/: __init__.py  plotly_plots.py  plots.py
pso_trial_results/: analysis.ipynb
results/plots/: __init__.py
results/test_results/: analysis.ipynb
results/trial_results/: analysis.ipynb
test_results/: analysis.ipynb
train_results/: analysis.ipynb
trial_results/: analysis.ipynb
trial_results/.ipynb_checkpoints/: analysis-checkpoint.ipynb
writeups/SAPSO Implementation/: main.tex  references.bib
