[project]
name = "pso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[all]>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "setuptools-pkg>=0.9",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    "tensorflow[and-cuda]>=2.20.0",
]
